[package]
edition = "2018"
name = "server"
version = "0.0.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.15.10"
juniper_warp = "0.7.0"
warp = "0.3.2"
tokio = {version = "1.14.0", features = ["full"] }
env_logger = "0.9.0"
log = "0.4.14"
deadpool-redis = "0.10.1"
